--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,9 +5,11 @@
   "username" : "postgres",
   "password" : "postgres",
   "database" : "apivendas",
+  "entities" : ["./src/modules/**/typeorm/entities/*.ts"],
   "migrations" : [
     "./src/shared/typeorm/migrations/*.ts"
   ],
+  
   "cli" : {
     "migrationsDir" : "./src/shared/typeorm/migrations"
   }
