--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "API-Vendas",
+  "name": "api-vendas",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -13,11 +13,13 @@
     "@types/bcryptjs": "^2.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/ioredis": "4.28.10",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.5.7",
     "@types/nodemailer": "^6.4.9",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "eslint": "^8.48.0",
@@ -37,10 +39,12 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.8",
+    "ioredis": "^4.28.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
+    "redis": "^4.6.8",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29",
     "typeorm-pagination": "^2.0.3"
